--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-/*body{
+body{
 
-  background-color: turquoise;
-}*/
+  background-image:url(https://img.wallpapersafari.com/desktop/1920/1080/28/66/sOByYz.jpg);
+}
 
 hr{
   border-color: whitesmoke;
