--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,11 +17,13 @@ td{
 }
 
 hr{
-  color: red;
-  border-style: dotted;
-  border-top: none;
-  height: 5px;
-  width: 10%
+   border-color: lightGrey;
+   border-style: none;
+   border-top-style: dotted;
+   border-width: 5px;
+   width: 5%;
+   margin-top: 60px;
+   margin-bottom: 60px;
 }
 
 /* Heading */
@@ -245,9 +247,6 @@ hr{
   font-size: 3rem;
 }
 
-#footer-adjust{
-  padding-top: 0px;
-}
 
 /* #footer{
   padding: 7% 15%;
@@ -257,4 +256,11 @@ hr{
 
 .social-icon {
   margin: 20px 10px;
+}
+
+/* add content */
+
+.added-content{
+  position: absolute;
+  visibility: hidden;
 }
