--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ section {
 .navbar {
   padding: 1% 3%;
   background: #242424;
+  box-shadow: 0 10px 10px -10px rgb(0 0 0 / 35%);
   height: 80px;
   display: flex;
   justify-content: center;
