--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ section {
 .navbar {
   padding: 1% 3%;
   background: #242424;
-  box-shadow: 0 10px 10px -10px rgb(0 0 0 / 35%);
+  box-shadow: 0 10px 10px -10px rgb(0 0 0 / 35%), 0 10px 10px -10px rgb(0 0 0 / 35%);
   height: 80px;
   display: flex;
   justify-content: center;
@@ -68,6 +68,7 @@ section {
 }
 
 #navbar-logo {
+  height: 60px;
   padding-left: 30px;
   background-color: #77cdff;
   background-image: linear-gradient(to top, #03a9f4 0%, #ffb1);
