--- a/css/styles.css
+++ b/css/styles.css
@@ -72,13 +72,7 @@ section {
 #navbar-logo {
   height: 60px;
   padding-left: 30px;
-  background-color: #77cdff;
-  background-image: linear-gradient(to top, #03a9f4 0%, #ffb1);
-  background-size: 100%;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent;
+  color: #03a9f4;
   display: flex;
   align-items: center;
   cursor: pointer;
