--- a/css/styles.css
+++ b/css/styles.css
@@ -317,7 +317,7 @@ section {
   padding: 7px;
   content: "Animate";
   position: absolute;
-  top: 0;
+  top: -0.5px;
   left: 0;
   width: 90px;
   height: 40px;
