--- a/css/styles.css
+++ b/css/styles.css
@@ -475,7 +475,6 @@ section {
     justify-self: center;
     width: 100%;
     margin: 0 auto;
-    height: 100vh;
   }
 
   .main-content {
@@ -485,6 +484,10 @@ section {
   .main-content h1 {
     font-size: 2.5rem;
     margin-top: 2rem;
+  }
+  
+  #carousel {
+    margin: 50px 0;
   }
 }
 
