--- a/css/styles.css
+++ b/css/styles.css
@@ -12,14 +12,11 @@ body {
 
 section {
   max-width: 1329px;
-  margin: 50px 0;
+  margin: 5% 0;
+  padding: 1% 0;
 }
 
 /* common */
-.container-fluid {
-  padding: 7% 15%;
-}
-
 .big-heading {
   align-self: center;
   font-size: 3.5rem;
@@ -42,84 +39,103 @@ section {
   text-align: center;
 }
 
+.neon-switch {
+  position: relative;
+  width: 200px;
+  height: 40px;
+  margin-top: 30px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: linear-gradient(0deg, #333, #000);
+  outline: none;
+  border-radius: 20px;
+  box-shadow: 0 0 0 4px #353535, 0 0 0 5px #3e3e3e, inset 0 0 10px rgba(0, 0, 0, 1), 0 5px 20px rgba(0, 0, 0, 0.5), inset 0 0 15px rgba(0, 0, 0, 0.2);
+}
+
+.neon-switch:checked {
+  background: linear-gradient(0deg, #6dd1ff, #20b7ff);
+  box-shadow: 0 0 2px #6dd1ff, 0 0 0 4px #353535, 0 0 0 5px #3e3e3e, inset 0 0 10px rgba(0, 0, 0, 1), 0 5px 20px rgba(0, 0, 0, 0.5), inset 0 0 15px rgba(0, 0, 0, 0.2);
+}
+
+.neon-switch::before {
+  color: grey;
+  padding: 7px;
+  content: "Iphone Mode";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 120px;
+  height: 40px;
+  background: linear-gradient(0deg, #000, #6b6b6b);
+  border-radius: 20px;
+  box-shadow: 0 0 0 1px #232323;
+  transform: scale(0.98, 0.96);
+  transition: 0.5s
+}
+
+.neon-switch:checked::before {
+  color: #63cdff;
+  top: 0;
+  left: 80px;
+}
+
+.neon-switch::after {
+  content: "";
+  position: absolute;
+  top: calc(50% - 2px);
+  left: 100px;
+  width: 4px;
+  height: 4px;
+  background: linear-gradient(0deg, #6b6b6b, #000);
+  border-radius: 50%;
+  transition: 0.5s;
+}
+
+.neon-switch:checked::after {
+  left: 180px;
+  background: #63cdff;
+  box-shadow: 0 0 5px #13b3ff, 0 0 15px #13b3ff;
+}
+
 /* navbar */
 .navbar {
-  padding: 1% 3%;
-  background: #242424;
-  box-shadow: 0 10px 10px -10px rgb(0 0 0 / 35%), 0 10px 10px -10px rgb(0 0 0 / 35%);
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.2rem;
-  position: sticky;
+  background-color: #242424 !important;
+  position: fixed;
   top: 0;
-  z-index: 999;
-  transition: top 0.3s;
-}
-
-.navbar-container {
-  display: flex;
-  justify-content: space-between;
-  height: 80px;
-  z-index: 1;
   width: 100%;
-  max-width: 1300px;
-  margin: 0 auto;
-  padding: 0 10px;
+  height: 85px;
+  padding: 1% 5%;
+  font-size: 1.2rem;
+  box-shadow: 0 10px 10px -10px rgb(0 0 0 / 35%), 0 10px 10px -10px rgb(0 0 0 / 35%);
+  z-index: 999;
+  transition: top 0.3s ease;
 }
 
-#navbar-logo {
+.navbar-brand {
   height: 60px;
-  padding-left: 30px;
   color: #03a9f4;
-  display: flex;
-  align-items: center;
   cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
+  text-shadow: -2px -2px #ffb1;
 }
 
-.navbar-menu {
-  display: flex;
-  align-items: center;
-  list-style: none;
-  text-align: center;
+.navbar-brand:hover {
+  color: #03a9f4;
+  transform: translateY(-1px);
+  transition: all 0.3s ease;
 }
 
-.navbar-item {
-  height: 80px;
-}
-
-.navbar-item select {
-  background-color: inherit;
-  border-radius: 14px;
-  margin: auto;
-}
-
-.navbar-item select option {
-  color: #242424;
-}
-
-.navbar-links {
+.nav-link {
   color: whitesmoke;
   display: flex;
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  padding: 0 1rem;
   height: 100%;
 }
 
-.navbar-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 1rem;
-  width: 100%;
-}
-
-.navbar-links:hover {
+.nav-link:hover {
   text-decoration: none;
   transform: translateY(-1px);
   color: #03a9f4;
@@ -130,202 +146,208 @@ section {
   background-color: white;
 }
 
-@media screen and (max-width: 960px) {
-  .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    height: 80px;
-    z-index: 1;
-    width: 100%;
-    max-width: 1300px;
-    padding: 0;
-  }
-
-  .navbar-menu {
-    display: grid;
-    grid-template-columns: auto;
-    margin: 0;
-    width: 100%;
-    position: absolute;
-    top: -1000px;
-    opacity: 0;
-    transition: all 0.5s ease;
-    height: 50vh;
-    z-index: -1;
+@media screen and (max-width: 992px) {
+  .nav-item {
     background: #242424;
   }
 
-  .navbar-menu.active {
-    background: #2424242;
-    top: 100%;
+  .nav-link {
+    text-align: center;
+    padding: 2rem;
     width: 100%;
-    opacity: 1;
-    transition: all 0.5 as ease;
-    z-index: 99;
-    height: 70vh;
-    font-size: 1.6rem;
   }
 
-  #navbar-logo {
-    padding-left: 25px;
-  }
-
-  .navbar-toggle .bar {
+  .navbar-toggler .bar {
     width: 25px;
     height: 3px;
     margin: 5px auto;
     transition: all 0.3s ease-in-out;
     background: white;
-  }
-
-  .navbar-item {
-    width: 100%;
-  }
-
-  .navbar-links {
-    text-align: center;
-    padding: 2rem;
-    width: 100%;
-    display: table;
-  }
-
-  .navbar-item select {
-    width: 100%;
-    text-align: center;
-    padding: 0rem;
-    width: 200px;
-  }
-
-  #mobile-menu {
-    position: absolute;
-    top: 20%;
-    right: 5%;
-    transform: translate(5%, 20%);
-  }
-
-  .navbar-btn {
-    padding: 2rem;
-  }
-
-  .navbar-toggle .bar {
     display: block;
     cursor: pointer;
   }
 
-  #mobile-menu.is-active .bar:nth-child(2) {
+  .navbar-toggler.is-active .bar:nth-child(2) {
     opacity: 0;
   }
 
-  #mobile-menu.is-active .bar:nth-child(1) {
+  .navbar-toggler.is-active .bar:nth-child(1) {
     transform: translateY(8px) rotate(45deg);
   }
 
-  #mobile-menu.is-active .bar:nth-child(3) {
+  .navbar-toggler.is-active .bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
   }
 }
 
 /* navbar end */
-/* title */
+/* title*/
+#title {
+  margin-top: 180px;
+}
+
 .main-container {
+  max-height: 900px;
+  padding: 0 6%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
-  justify-self: center;
-  margin: 0 auto;
-  height: 85vh;
-  z-index: 1;
-  width: 100%;
-  max-width: 100%;
-  padding: 0 80px;
 }
 
-.main-content h1 {
+#title .main-content h1 {
   font-size: 50px;
-  background: linear-gradient(315deg, #00d0ff, #00d0ff, #4dff03);
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent;
+  line-height: 1.2;
   min-width: 399px;
 }
 
-.main-content:nth-child(2) h1 {
-  font-size: 75px;
-}
-
-.main-btn {
-  font-size: 1rem;
-  background-image: linear-gradient(to right, #45B649 0%, #DCE35B 100%);
-  padding: 14px 32px;
-  border: none;
-  border-radius: 100px;
-  color: white;
-  margin-top: 2rem;
-  cursor: pointer;
-  position: relative;
-  transition: all 0.35s;
-  outline: none;
-}
-
-.main-btn a {
-  position: relative;
-  z-index: 2;
-  color: black;
-  text-decoration: none;
-}
-
-.main-btn:after {
+/* templates */
+.template-image {
   position: absolute;
-  content: '';
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  background-image: linear-gradient(to right, #DCE35B 0%, #45B649 100%);
-  transition: all 0.35s;
-  border-radius: 100px;
+  top: 226.3px;
+  left: 55%;
+  height: 235px;
+  transform: skewY(-10deg);
 }
 
-.main-btn:hover {
-  color: black;
+.template-image:hover {
+  transform: skewY(-10deg) translateY(-30px);
+  z-index: 3;
+  transition: all 0.5s ease;
 }
 
-.main-btn:hover:after {
+.template-image:nth-child(2) {
+  top: 216px;
+  left: 50%;
+}
+
+.template-image:nth-child(3) {
+  top: 200px;
+  left: 45%;
+}
+
+@media screen and (max-width: 1101px) {
+  #title .main-container {
+    display: block;
+    align-items: center;
+    text-align: center;
+    padding: 0 6%;
+  }
+
+  .template-image {
+    position: absolute;
+    top: 560px;
+    left: calc(55% / 2);
+    height: 235px;
+    transform: skewY(-10deg);
+  }
+
+  .template-image:hover {
+    transform: skewY(-10deg) translateY(-30px);
+    z-index: 3;
+    transition: all 0.5s ease;
+  }
+
+  .template-image:nth-child(2) {
+    top: 523px;
+    left: calc(50% / 2);
+  }
+
+  .template-image:nth-child(3) {
+    top: 462px;
+    left: calc(45% / 2);
+  }
+}
+
+/* title end */
+/* about */
+#about {
+  text-align: center;
+  position: relative;
+}
+
+.main__img--container {
+  text-align: center;
+}
+
+#main-img {
+  height: 80%;
   width: 100%;
 }
 
-.neon-switch {
-  margin-top: 30px;
+#about .main-content h1 {
+  font-size: 75px;
+  line-height: 1.2;
+  min-width: 399px;
+}
+
+.main-content p {
+  margin-top: 1rem;
+  font-size: 2rem;
+  font-weight: 700;
+  color: whitesmoke;
+}
+
+@media screen and (max-width: 1101px) {
+  #about .main {
+    padding: 100px 0;
+    text-align: center;
+  }
+
+  .main-container {
+    display: grid;
+    grid-template-columns: auto;
+    align-items: center;
+    justify-self: center;
+    width: 100%;
+    margin: 0 auto;
+    height: 100vh;
+  }
+
+  .main-img--container {
+    height: 500px;
+  }
+
+  .main-content {
+    text-align: center;
+  }
+
+  .main-content h1 {
+    font-size: 2.5rem;
+    margin-top: 2rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .main-content h1 {
+    font-size: 2rem;
+    margin-top: 3rem;
+  }
+
+  .main-btn {
+    padding: 12px 36px;
+    margin: 2.5rem 0;
+  }
+}
+
+/* features and skills Section */
+#features {
+  text-align: center;
   position: relative;
-  width: 200px;
-  height: 40px;
-  -webkit-appearance: none;
-  background: linear-gradient(0deg, #333, #000);
-  outline: none;
-  border-radius: 20px;
-  box-shadow: 0 0 0 4px #353535, 0 0 0 5px #3e3e3e, inset 0 0 10px rgba(0, 0, 0, 1), 0 5px 20px rgba(0, 0, 0, 0.5), inset 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
-.neon-switch:checked {
-  background: linear-gradient(0deg, #6dd1ff, #20b7ff);
-  box-shadow: 0 0 2px #6dd1ff,0 0 0 4px #353535, 0 0 0 5px #3e3e3e, inset 0 0 10px rgba(0, 0, 0, 1), 0 5px 20px rgba(0, 0, 0, 0.5), inset 0 0 15px rgba(0, 0, 0, 0.2);
+#skills {
+  text-align: center;
+  position: relative;
 }
 
-.neon-switch::before {
-  color: grey;
-  padding: 7px;
-  content: "Animate";
-  position: absolute;
-  top: -0.7px;
-  left: 0;
-  width: 90px;
-  height: 40px;
-  background: linear-gradient(0deg, #000, #6b6b6b);
-  border-radius: 20px;
-  box-shadow: 0 0 0 1px #232323;
-  transform: scale(0.98, 0.96);
-  transition: 0.5s
+#skill .row {
+  width: 95%;
+  margin: auto;
+}
+
+.skill-box-button {
+  text-align: center;
+  margin: 100px 0;
 }
 
 .html.neon-switch::before {
@@ -352,265 +374,6 @@ section {
   content: "Java";
 }
 
-.neon-switch[name=feedback-button]::before {
-  content: "Select"
-}
-
-.neon-switch[type=checkbox]:checked::before {
-  color: #63cdff;
-  left: 110px;
-}
-
-.neon-switch[type=radio]:checked::before {
-  color: #63cdff;
-  left: 60px;
-}
-
-.review-wrapper .neon-switch[type=radio]:checked::before {
-  color: #63cdff;
-  left: 110px;
-}
-
-.javascript.neon-switch[type=radio]:checked::before {
-  color: #63cdff;
-  left: 60px;
-}
-
-.neon-switch::after {
-  content: "";
-  position: absolute;
-  top: calc(50% - 2px);
-  left: 70px;
-  width: 4px;
-  height: 4px;
-  background: linear-gradient(0deg, #6b6b6b, #000);
-  border-radius: 50%;
-  transition: 0.5s;
-}
-
-.neon-switch:checked::after {
-  left: 180px;
-  background: #63cdff;
-  box-shadow: 0 0 5px #13b3ff, 0 0 15px #13b3ff;
-}
-
-.review-wrapper .neon-switch[type=radio]:checked::after {
-  left: 180px;
-  background: #63cdff;
-  box-shadow: 0 0 5px #13b3ff, 0 0 15px #13b3ff;
-}
-
-.neon-switch[type=radio]:checked::after {
-  left: 130px;
-  background: #63cdff;
-  box-shadow: 0 0 5px #13b3ff, 0 0 15px #13b3ff;
-}
-
-.main__img--container {
-  text-align: center;
-}
-
-#main-img {
-  height: 80%;
-  width: 100%;
-}
-
-.main-content p {
-  margin-top: 1rem;
-  font-size: 2rem;
-  font-weight: 700;
-  color: whitesmoke;
-}
-
-/* title end */
-/* about */
-#about {
-  text-align: center;
-  position: relative;
-}
-
-/* animating background gradient */
-/* #about::before {
-  font-size: 1rem;
-  background-image: linear-gradient(45deg, #03a9f4 0%, #ff0058 100%);
-  padding: 14px 32px;
-  border: none;
-  border-radius: 100px;
-  color: white;
-  margin-top: 2rem;
-  cursor: pointer;
-  position: relative;
-  transition: all 0.35s;
-  outline: none;
-}
-
-#about::after {
-  position: absolute;
-  content: '';
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  background-image: linear-gradient(45deg, #03a9f4 0%, #ff0058 100%);
-  opacity: 0.4;
-  transition: all 0.35s;
-  border-radius: 100px;
-  filter: blur(30px);
-}
-
-#about:hover:after {
-  width: 100%;
-  z-index: -1;
-} */
-@media screen and (max-width: 960px) {
-  #about .main {
-    padding: 100px 0;
-    text-align: center;
-  }
-
-  .main-container {
-    display: grid;
-    grid-template-columns: auto;
-    align-items: center;
-    justify-self: center;
-    width: 100%;
-    margin: 0 auto;
-  }
-
-  .main-content {
-    text-align: center;
-  }
-
-  .main-content h1 {
-    font-size: 2.5rem;
-    margin-top: 2rem;
-  }
-  
-  #carousel {
-    margin: 50px auto 100px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .main-content h1 {
-    font-size: 2rem;
-    margin-top: 3rem;
-  }
-
-  .main-btn {
-    padding: 12px 36px;
-    margin: 2.5rem 0;
-  }
-}
-
-/* title carousel */
-#carousal {
-  position: relative;
-  width: 500px;
-  height: 235px;
-  overflow: hidden;
-  margin: 0 auto;
-  border-radius: 20px;
-}
-
-.list-carousal {
-  margin: 0;
-  list-style: none;
-  width: 500px;
-  height: 500px;
-  float: left;
-  padding: 0;
-}
-
-#content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: calc(500px * 5);
-  height: 500px;
-  animation: toLeft 20s ease-out infinite alternate;
-  margin: 0;
-  padding: 0;
-}
-
-@keyframes toLeft {
-  0%, 15% {
-    margin-left: 0;
-    opacity: 2;
-  }
-
-  20%, 35% {
-    margin-left: -500px;
-    opacity: 1;
-  }
-
-  40%, 55% {
-    margin-left: -1000px;
-    opacity: 1;
-  }
-
-  60%, 75% {
-    margin-left: -1500px;
-    opacity: 1;
-  }
-
-  80%, 100% {
-    margin-left: -2000px;
-    opacity: 1;
-  }
-}
-
-/* title carousel end */
-/* features and skills Section */
-#features {
-  text-align: center;
-  position: relative;
-}
-
-/* animating gradient background */
-/* #features::before {
-  font-size: 1rem;
-  background-image: linear-gradient(45deg, #ffbc00 0%, #ff0058 100%);
-  padding: 14px 32px;
-  border: none;
-  border-radius: 100px;
-  color: white;
-  margin-top: 2rem;
-  cursor: pointer;
-  position: relative;
-  transition: all 0.35s;
-  outline: none;
-}
-
-#features::after {
-  position: absolute;
-  content: '';
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  background-image: linear-gradient(45deg, #ffbc00 0%, #ff0058 100%);
-  opacity: 0.4;
-  transition: all 0.35s;
-  border-radius: 100px;
-  filter: blur(30px);
-}
-
-#features:hover:after {
-  width: 100%;
-  z-index: -1;
-} */
-
-#skills {
-  text-align: center;
-  position: relative;
-}
-
-#skill .row {
-  width: 95%;
-  margin: auto;
-}
-
 .skill-description-image {
   width: 470px;
   height: 400px;
@@ -632,54 +395,10 @@ section {
   display: block;
 }
 
-.skill-box-button {
-  text-align: center;
-  margin: 100px 0;
-}
-
-.description-btn {
-  width: 150px;
-  padding: 20px 0;
-  margin: 20px 0;
-}
-
 .skill table {
   margin: 15px 0;
 }
 
-/* animating gradient background */
-/* #skills::before {
-  font-size: 1rem;
-  background-image: linear-gradient(315deg, #4dff03 0%, #00d0ff 100%);
-  padding: 14px 32px;
-  border: none;
-  border-radius: 100px;
-  color: white;
-  margin-top: 2rem;
-  cursor: pointer;
-  position: relative;
-  transition: all 0.35s;
-  outline: none;
-}
-
-#skills::after {
-  position: absolute;
-  content: '';
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  background-image: linear-gradient(315deg, #4dff03 0%, #00d0ff 100%);
-  opacity: 0.4;
-  transition: all 0.35s;
-  border-radius: 100px;
-  filter: blur(30px);
-}
-
-#skills:hover:after {
-  width: 100%;
-  z-index: -1;
-} */
 .feature-title {
   font-size: 1.5rem;
 }
@@ -709,6 +428,9 @@ section {
 
 .testimonial-text {
   font-size: 3rem;
+  text-align: center;
+  width: 966px;
+  margin: 0 auto;
   line-height: 1.5;
   min-height: 200px;
 }
@@ -774,12 +496,11 @@ section {
 }
 
 /* pricing */
-
 .card-deck {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 80vh;
   background: inherit;
 }
 
@@ -795,6 +516,7 @@ section {
 .card-deck .price-card {
   position: relative;
   width: 320px;
+  min-width: 320px;
   height: 400px;
   color: #fff;
   background: inherit;
@@ -895,7 +617,7 @@ section {
   background-image: linear-gradient(315deg, #4dff03, #00d0ff);
 }
 
-@media screen and (max-width: 960px){
+@media screen and (max-width: 960px) {
   .big-heading {
     font-size: 3rem;
   }
@@ -904,8 +626,9 @@ section {
 /* quick view */
 .greyout {
   position: fixed;
-  height: 10000px;
-  width: 10000px;
+  top: 0;
+  height: 100%;
+  width: 100%;
   opacity: 0.5;
   background-color: grey;
   z-index: 1000;
@@ -946,10 +669,73 @@ section {
   cursor: pointer;
 }
 
+.gradient-wrapper {
+  position: absolute;
+  right: 150px;
+  bottom: 10px;
+  border: double 4px transparent;
+  border-radius: 80px;
+  background-image: linear-gradient(white, white), radial-gradient(circle at top right, #ffbc00, #ff0058);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  width: 205px;
+  border-radius: 14px;
+}
+
+.advanced .quick-view-content .gradient-wrapper {
+  position: absolute;
+  right: 150px;
+  bottom: 10px;
+  border: double 4px transparent;
+  border-radius: 80px;
+  background-image: linear-gradient(white, white), radial-gradient(circle at top right, #03a9f4, #ff0058);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  width: 205px;
+  border-radius: 14px;
+}
+
+.pro .quick-view-content .gradient-wrapper {
+  position: absolute;
+  right: 150px;
+  bottom: 10px;
+  border: double 4px transparent;
+  border-radius: 80px;
+  background-image: linear-gradient(white, white), radial-gradient(circle at top right, #4dff03, #00d0ff);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  width: 205px;
+  border-radius: 14px;
+}
+
 .purchase-button {
   font-weight: 400;
   background-color: #fff;
   background-image: linear-gradient(315deg, #ffbc00, #ff0058);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  background-size: 100%;
+  width: 200px;
+}
+
+.purchase-button.advanced {
+  font-weight: 400;
+  background-color: #fff;
+  background-image: linear-gradient(315deg, #03a9f4, #ff0058);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  background-size: 100%;
+  width: 200px;
+}
+
+.purchase-button.pro {
+  font-weight: 400;
+  background-color: #fff;
+  background-image: linear-gradient(315deg, #4dff03, #00d0ff);
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -966,19 +752,6 @@ section {
   -webkit-text-fill-color: revert;
   -moz-text-fill-color: revert;
   border-radius: 10px;
-}
-
-.gradient-wrapper {
-  position: absolute;
-  right: 150px;
-  bottom: 10px;
-  border: double 4px transparent;
-  border-radius: 80px;
-  background-image: linear-gradient(white, white), radial-gradient(circle at top right, #ffbc00, #ff0058);
-  background-origin: border-box;
-  background-clip: content-box, border-box;
-  width: 205px;
-  border-radius: 14px;
 }
 
 /* footer */
@@ -1054,7 +827,7 @@ section {
   color: whitesmoke;
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 1101px) {
   #footer__logo {
     margin-bottom: 2rem;
   }
